late night changes

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="./assets/AboutMe.jpg"
             alt="Profile picture"
             class="about-pic"
           />
@@ -91,7 +91,7 @@
                 class="icon"
               />
               <h3>Experience</h3>
-              <p>2+ years <br />Frontend Development</p>
+              <p>1+ years <br />Full Stack Development</p>
             </div>
             <div class="details-container">
               <img
@@ -100,17 +100,16 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.Sc. Bachelors Degree<br />M.Sc. Masters Degree</p>
+              <p>B.S Computer Science<br />Texas Christian University</p>
             </div>
           </div>
           <div class="text-container">
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic quis
-              reprehenderit et laborum, rem, dolore eum quod voluptate
-              exercitationem nobis, nihil esse debitis maxime facere minus sint
-              delectus velit in eos quo officiis explicabo deleniti dignissimos.
-              Eligendi illum libero dolorum cum laboriosam corrupti quidem,
-              reiciendis ea magnam? Nulla, impedit fuga!
+                Hello! My name is Danny Mairena, and I am a computer science major from Managua, Nicaragua, passionate about using technology to solve real-world problems. Throughout my studies at Texas Christian University, and Ohlone College (2021 Alumni) I have developed a strong foundation in programming languages such as Java and Python and expertise in data structures and algorithms. 
+
+                In addition to my technical skills, I am a highly motivated and detail-oriented individual with excellent communication and teamwork abilities. I thrive in dynamic and collaborative environments and am always eager to learn and grow professionally.
+
+                I am currently seeking opportunities to utilize my skills and contribute to the success of a forward-thinking organization. Feel free to connect with me to learn more about my background and interests, and to explore potential collaboration opportunities.
             </p>
           </div>
         </div>
