--- a/index.html
+++ b/index.html
@@ -50,23 +50,23 @@
             onclick="window.open('./assets/DannyMairenaResumeSept2023.pdf')"
           >
             Download CV
-          </button>
+  <!--       </button>
           <button class="btn btn-color-1" onclick="location.href='./#contact'">
             Contact Info
-          </button>
+          </button> -->  
         </div>
         <div id="socials-container">
           <img
             src="./assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
-            onclick="location.href='https://linkedin.com/'"
+            onclick="location.href='https://www.linkedin.com/in/danny-mairena/'"
           />
           <img
             src="./assets/github.png"
             alt="My Github profile"
             class="icon"
-            onclick="location.href='https://github.com/'"
+            onclick="location.href='https://github.com/dannymairena01'"
           />
         </div>
       </div>
@@ -75,13 +75,13 @@
       <p class="section__text__p1">Get To Know More</p>
       <h1 class="title">About Me</h1>
       <div class="section-container">
-        <div class="section__pic-container">
+    <!--     <div class="section__pic-container">
           <img
             src="./assets/AboutMe.jpg"
             alt="Profile picture"
             class="about-pic"
           />
-        </div>
+        </div> -->
         <div class="about-details-container">
           <div class="about-containers">
             <div class="details-container">
@@ -100,17 +100,12 @@
                 class="icon"
               />
               <h3>Education</h3>
-              <p>B.S Computer Science<br />Texas Christian University</p>
+              <p>B.S Computer Science<br />Texas Christian University (2021-2024)</p>
             </div>
           </div>
           <div class="text-container">
-            <p>
-                Hello! My name is Danny Mairena, and I am a computer science major from Managua, Nicaragua, passionate about using technology to solve real-world problems. Throughout my studies at Texas Christian University, and Ohlone College (2021 Alumni) I have developed a strong foundation in programming languages such as Java and Python and expertise in data structures and algorithms. 
-
-                In addition to my technical skills, I am a highly motivated and detail-oriented individual with excellent communication and teamwork abilities. I thrive in dynamic and collaborative environments and am always eager to learn and grow professionally.
-
-                I am currently seeking opportunities to utilize my skills and contribute to the success of a forward-thinking organization. Feel free to connect with me to learn more about my background and interests, and to explore potential collaboration opportunities.
-            </p>
+            <p> Hello! I'm Danny Mairena, a proactive computer science graduate passionate about applying technology to real-world challenges. My academic journey at Texas Christian University (Class of 2024) and Ohlone College (Class of 2021) provided a robust foundation in frontend, backend, and database technologies and expertise in data structures and algorithms. During my coursework, especially in the senior design project, I immersed myself in diverse technologies like VueJS, SpringBoot, Azure, and MySQL. This hands-on experience shaped a comprehensive understanding of full-stack development, making me proficient in both frontend and backend technologies. Beyond technical skills, I bring a highly motivated and detail-oriented approach. Thriving in dynamic, collaborative environments, my effective communication and teamwork abilities were evident in projects like the Peer Evaluation Tool, where I contributed to creating a platform for senior computer science students at TCU. Eager to contribute my skills to forward-thinking organizations, I actively seek opportunities to apply my knowledge, learn more, and contribute to innovative projects. I invite you to connect with me, explore my background, discuss shared interests, and consider collaboration on exciting endeavors. </p>
+                
           </div>
         </div>
       </div>
@@ -136,7 +131,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>HTML</h3>
+                  <h3>HTML, CSS</h3>
                   <p>Experienced</p>
                 </div>
               </article>
@@ -147,18 +142,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>CSS</h3>
-                  <p>Experienced</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>SASS</h3>
+                  <h3>VueJS</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -170,7 +154,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Intermediate</p>
                 </div>
               </article>
               <article>
@@ -191,14 +175,16 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Material UI</h3>
+                  <h3>ReactJS</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
+
+
             </div>
           </div>
           <div class="details-container">
-            <h2 class="experience-sub-title">Frontend Development</h2>
+            <h2 class="experience-sub-title">Backend Development</h2>
             <div class="article-container">
               <article>
                 <img
@@ -207,7 +193,18 @@
                   class="icon"
                 />
                 <div>
-                  <h3>PostgreSQL</h3>
+                  <h3>Spring Boot</h3>
+                  <p>Experienced</p>
+                </div>
+              </article>
+              <article>
+                <img
+                  src="./assets/checkmark.png"
+                  alt="Experience icon"
+                  class="icon"
+                />
+                <div>
+                  <h3>Django</h3>
                   <p>Basic</p>
                 </div>
               </article>
@@ -218,7 +215,7 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Node JS</h3>
+                  <h3>ExpressJS</h3>
                   <p>Intermediate</p>
                 </div>
               </article>
@@ -229,23 +226,50 @@
                   class="icon"
                 />
                 <div>
-                  <h3>Express JS</h3>
-                  <p>Intermediate</p>
-                </div>
-              </article>
-              <article>
-                <img
-                  src="./assets/checkmark.png"
-                  alt="Experience icon"
-                  class="icon"
-                />
-                <div>
-                  <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <h3>Go</h3>
+                  <p>Basic</p>
                 </div>
               </article>
             </div>
           </div>
+            <div class="details-container">
+              <h2 class="experience-sub-title">Databases</h2>
+              <div class="article-container">
+                <article>
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                  />
+                  <div>
+                    <h3>MySQL</h3>
+                    <p>Experienced</p>
+                  </div>
+                </article>
+                <article>
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                  />
+                  <div>
+                    <h3>MongoDB</h3>
+                    <p>Experienced</p>
+                  </div>
+                </article>
+                <article>
+                  <img
+                    src="./assets/checkmark.png"
+                    alt="Experience icon"
+                    class="icon"
+                  />
+                  <div>
+                    <h3>Firebase</h3>
+                    <p>Basic</p>
+                  </div>
+                </article>
+              </div>
+            </div>
         </div>
       </div>
       <img
@@ -263,73 +287,74 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-1.png"
+                src="./assets/DiscordBot.jpg"
                 alt="Project 1"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project One</h2>
+            <h2 class="experience-sub-title project-title">Discord Music Bot</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/dannymairena01/DJMonko'"
               >
                 Github
               </button>
-              <button
+        <!--       <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/Book.jpeg"
                 alt="Project 2"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Two</h2>
+            <h2 class="experience-sub-title project-title">Book Manager</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/dannymairena01/BookManager'"
               >
                 Github
               </button>
-              <button
+             <!--  <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
-              </button>
+              </button> -->
             </div>
           </div>
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/Slide puzzle.png"
                 alt="Project 3"
                 class="project-img"
               />
             </div>
-            <h2 class="experience-sub-title project-title">Project Three</h2>
+            <h2 class="experience-sub-title project-title">Slide Puzzle</h2>
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/dannymairena01/SlidePuzzle'"
               >
                 Github
               </button>
-              <button
+            <!--   <button
                 class="btn btn-color-2 project-btn"
                 onclick="location.href='https://github.com/'"
               >
                 Live Demo
               </button>
+              -->
             </div>
           </div>
         </div>
@@ -370,7 +395,7 @@
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#projects">Projects</a></li>
-            <li><a href="#contact">Contact</a></li>
+          <!--   <li><a href="#contact">Contact</a></li> -->
           </ul>
         </div>
       </nav>
